--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description:         'A reserved <a href="https://jekyllrb.com" target="_blank">
 url:                 https://dopolavoro-matematico.github.io/
 baseurl:             ''
 paginate:            5
-permalink: 			 /:categories/:title:output_ext
+permalink: 			 /:year/:month/:day/:title:output_ext
 
 # About/contact
 author:
@@ -16,6 +16,7 @@ author:
 # Gems
 plugins:
   - jekyll-paginate
+  - jekyll-category-pages
 
 # Custom vars
 version:             0.1.0
