--- a/_config.yml
+++ b/_config.yml
@@ -2,16 +2,16 @@
 title:               Wikilabs
 tagline:             'A Jekyll theme'
 description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme .'
-url:                 https://dopolavoro-matematico.github.io/
+url:                 http://wikilabs.org
 baseurl:             ''
 paginate:            5
 permalink: 			 /:year/:month/:day/:title:output_ext
 
 # About/contact
 author:
-  name:              alendo
-  url:               https://twitter.com/alendo
-  email:             alendo@gmail.com
+  name:              etcware
+  url:               http://etcware.it
+  email:             a.donnini@etcware.it
 
 # Gems
 plugins:
