--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:               Wikilabs
 tagline:             'A Jekyll theme'
 description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme .'
-url:                 http://www.wikilabs.org
+url:                 https://www.wikilabs.org
 baseurl:             ''
 paginate:            5
 permalink: 			 /:year/:month/:day/:title:output_ext
